--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
 <h1>Student Details</h1> 
 <form method="POST" action="form.php">
 <h3>Name
-<input type="text" name="name" placeholder="emter your name" required><br></h3>
+<input type="text" name="name" placeholder="emter student name" required><br></h3>
 <h3>Suc code
 <input type="number" name="suc" placeholder="Enter your succode" required><br></h3>
 <h3> Email ID
@@ -51,4 +51,5 @@
 <input type="reset" name ="reset" value="reset">
 </form>
 </body>
+
 </html>    
